src/objects/Section_Product__c.object
<CustomObject>
    <description>Products associated to Sections from WHICS</description>
    <fields>
        <fullName>Ambulance__c</fullName>
        <label>Ambulance</label>
        <picklist>
            <picklistValues>
                <fullName>Emergency Transport Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ancillary_Date_Withdrawn__c</fullName>
        <label>Ancillary Date Withdrawn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Upgrade__c</fullName>
        <description>Select if relevant to SplitPay groups. This information ensures products displayed as base or upgrade in book.</description>
        <inlineHelpText>Select if relevant to SplitPay groups. This information ensures products displayed as base or upgrade in book.</inlineHelpText>
        <label>Base or Upgrade Product</label>
        <picklist>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Code</label>
        <referenceTo>Broker_Code__c</referenceTo>
        <relationshipName>Section_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clone_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone of</label>
        <referenceTo>Section_Product__c</referenceTo>
        <relationshipName>Section_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Code__c</fullName>
        <label>Cover Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_closed__c</fullName>
        <label>Del Date closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Product_in_Book__c</fullName>
        <label>Display Product in Book</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, as withdrawn product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Excess_Code__c</fullName>
        <label>Employee Excess Code :ThisWillBeDeleted</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Excess_Code_lkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for employee excess code</description>
        <label>Employee Excess Code</label>
        <referenceTo>ExcessCodeEmployee__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Excess_Description__c</fullName>
        <label>Employee Excess Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Excess_Code__c</fullName>
        <label>Employer Excess Code  :ThisWillBeDeleted</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Excess_Code_lkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer Excess Code</label>
        <referenceTo>ExcessCodeEmployer__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Excess_Description__c</fullName>
        <label>Employer Excess Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Amount_Funded__c</fullName>
        <label>Fixed Amount Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hospital_Date_Withdrawn__c</fullName>
        <label>Hospital Date Withdrawn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LHC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Del LHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Date_Withdrawn__c</fullName>
        <label>Medical Date Withdrawn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overseas_Visitor_status__c</fullName>
        <label>Overseas Visitor status</label>
        <picklist>
            <picklistValues>
                <fullName>RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-RHCA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Percentage_Funded__c</fullName>
        <label>Percentage Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Unique code used to identify the product.</description>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Long_Name__c</fullName>
        <description>Long description for product</description>
        <label>Product Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_System__c</fullName>
        <label>Product Name System (Long)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name_Web__c</fullName>
        <label>Product Name Web</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ancillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary &amp; Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary &amp; Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary, Medical &amp; Hospital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Del Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resident_status__c</fullName>
        <label>Resident status</label>
        <picklist>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Visitor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Del Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
OR(
AND(
NOT(ISBLANK(Hospital_Date_Withdrawn__c)),
Hospital_Date_Withdrawn__c &lt;= TODAY()),
AND(
NOT(ISBLANK(Medical_Date_Withdrawn__c)),
Medical_Date_Withdrawn__c &lt;= TODAY()),
AND(
NOT(ISBLANK(Ancillary_Date_Withdrawn__c)),
Ancillary_Date_Withdrawn__c &lt;= TODAY()))
,&apos;Component Withdrawn&apos;,&apos;Active&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_statement_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax statement required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Date__c</fullName>
        <label>Del Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cover_Code__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Rate_Code__c</columns>
        <columns>Status__c</columns>
        <columns>Withdrawn_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Date_closed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name System (Short)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ambulance_is_mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Ambulance__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Ambulance__c</errorDisplayField>
        <errorMessage>Ambulance is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Overseas_Visitor_Validation</fullName>
        <active>false</active>
        <description>Mandatory when Resident status = Overseas Visitor</description>
        <errorConditionFormula>AND(
INCLUDES(Resident_status__c, &apos;Overseas Visitor&apos;),
ISNULL(Overseas_Visitor_status__c)
)</errorConditionFormula>
        <errorMessage>Overseas Visitor Status is mandatory when Resident Status equals &apos;Overseas Visitor&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Product_type_Chng_on_Cover_Code_set</fullName>
        <active>true</active>
        <errorConditionFormula>Cover_Code__c != null &amp;&amp;   ISCHANGED(Product_Type__c)</errorConditionFormula>
        <errorDisplayField>Product_Type__c</errorDisplayField>
        <errorMessage>Cannot change Product Type when Cover Code is set. To change Product Type, clear the value for Cover Code and Save changes with new Product and then re-apply Cover Code as applicable</errorMessage>
    </validationRules>
</CustomObject>